# stellar

./: .gitignore  404.html  Cargo.toml  README.md  category.tex  common_snippets.html  compile_snippets  data_structure.html  differentiation.tex  example.html  example_script.html  format_commands.html  fourier.tex  highlight.js  index.html  latex_implementation.html  latex_package.html  load-pdfjs.js  mathjax.html  metadata.html  misc_fish.html  misc_todo.html  misc_vscode.html  notepiece.sty  notes_compiler.html  notes_installation.html  notes_structure.html  pdf_stellar_format.html  print.html  script.js  searchindex.js  searchindex.json  sidebar.css  sidebar.js  snippet_build_scripts.html  stellar.html  stellar_cli.html  stellar_courses.html  stellar_installation.html  stellar_introduction.html  (+12 more)
.github/workflows/: deploy.yml
crates/stellar-check/: Cargo.toml
crates/stellar-cli/: Cargo.toml
crates/stellar-cli/src/: args.rs  main.rs
crates/stellar-cli/src/generator/: generator.rs  mod.rs  parser.rs
crates/stellar-cli/src/import/: import.rs  mod.rs
crates/stellar-compile/: Cargo.toml
crates/stellar-database/: Cargo.toml
crates/stellar-generate/: Cargo.toml
crates/stellar-generate/src/: crop_async.rs  generator.rs  lib.rs  parser.rs  pdf.rs  snippets.rs
crates/stellar-generator/: Cargo.toml
crates/stellar-import/: Cargo.toml
crates/stellar-import/src/: import.rs  lib.rs  pathbuf_type.rs
crates/stellar-parser/: Cargo.toml
crates/stellar-parser/src/: course_parser.rs  lib.rs  models.rs  page.rs  pdf.rs  pdf_parser.rs
crates/stellar-pdfformat/: Cargo.toml
crates/stellar-pdfformat/src/: crop_async.rs  lib.rs  models.rs  pdf_parser.rs  snippets.rs
crates/stellar-server/: Cargo.toml  default_config.toml
crates/stellar-server/assets/js/: filter.js  init.js  load-pdf.js  snippet.js  universe.js  utils.js
crates/stellar-server/src/: app.rs  asset.rs  assets.rs  config.rs  data.rs  hydrate.rs  lib.rs  routes.rs  server.rs
crates/stellar-server/src/app/: mod.rs
crates/stellar-server/src/app/api/: mod.rs  models.rs  routes.rs
crates/stellar-server/src/app/components/: loading.rs  mod.rs  navbar.rs  page_renderer.rs  snippets.rs  topbar.rs  universe_renderer.rs
crates/stellar-server/src/app/pages/: course.rs  edit_course.rs  edit_universe.rs  home.rs  mod.rs  not_found.rs  page.rs  reftree.rs  search.rs  snippet.rs  universe.rs
crates/stellar-server/style/: main.scss  navbar.scss  page-renderer.scss  page.scss  pdf_viewer.scss  themes.scss  top-bar.scss
crates/stellar-server/style/components/: loading.scss  navbar.scss  page_renderer.scss  topbar.scss  universe_renderer.scss
crates/stellar-server/style/pages/: course.scss  edit_course.scss  home.scss  not_found.scss  reftree.scss  search.scss  snippet.scss
crates/stellar-utils/: Cargo.toml
crates/stellar-web/: Cargo.toml
data/courses/: analysis.json  stellar-developer-guide.json  stellar-introduction.json  stellar-technical-guide.json
data/pages/: differentiation-definition.html  differentiation-definition.json  differentiation-interpretation.html  differentiation-interpretation.json  differentiation.json  integration-definite-integrals-area-problem.html  integration-definite-integrals-area-problem.json  integration-definite-integrals-definition.html  integration-definite-integrals-definition.json  integration-definite-integrals-functions.html  integration-definite-integrals-functions.json  integration-definite-integrals-fundamental-theorem-of-calculus.html  integration-definite-integrals-fundamental-theorem-of-calculus.json  integration-definite-integrals-properties.html  integration-definite-integrals-properties.json  integration-indefinite-integrals-definition.html  integration-indefinite-integrals-definition.json  integration-indefinite-integrals-integration-by-parts.html  integration-indefinite-integrals-integration-by-parts.json  integration-indefinite-integrals-properties.html  integration-indefinite-integrals-properties.json  integration-indefinite-integrals-substitution-rule.html  integration-indefinite-integrals-substitution-rule.json  integration-volume-of-solid-revolutions.html  integration-volume-of-solid-revolutions.json  limits-definition.html  limits-definition.json  limits-infinite-limits-and-limits-and-infinity.json  limits-infinite-limits-and-limits-at-infinity.html  limits-infinite-limits-and-limits-at-infinity.json  limits-properties.html  limits-properties.json  limits-squeeze-theorem.html  limits-squeeze-theorem.json  stellar-developer-introduction.html  stellar-developer-routes.html  stellar-technical-cli-import.html  stellar-technical-cli-latex.html  stellar-technical-cli-pdf.html  stellar-technical-cli-web.html  (+12 more)
data/test/: differentiation.tex  notepiece.sty
data/universes/: stellar.json
documentation/: book.toml  documentation.tex  lib.sty
documentation/src/: SUMMARY.md  common_snippets.md  data_structure.md  example.md  example_script.md  format_commands.md  introduction.md  latex_implementation.md  latex_package.md  mathjax.md  metadata.md  misc_fish.md  misc_vscode.md  notes_compiler.md  notes_installation.md  notes_structure.md  pdf_stellar_format.md  snippet_build_scripts.md  stellar_cli.md  stellar_courses.md  stellar_installation.md  stellar_introduction.md  stellar_pages.md  stellar_routes.md  structure.md  (+5 more)
examples/: README.md
latex-packages/: snippetformat.sty  stellar.sty
latex-parser/: Cargo.toml
nannou_web/: Cargo.toml
nannou_web_test/: Cargo.toml
notes-parser/: Cargo.toml
notes-server/: Cargo.toml
pdfviewtest/: package-lock.json  package.json
script/: navbar.js  script.js
scripts/: pdfcrop.py  pdfextract.py
static/: frame.html  index.html
stellar-cli/: Cargo.toml
stellar-cli/src/: args.rs  main.rs
stellar-cli/src/import/: import.rs  mod.rs
stellar-cli/src/latex/: generator.rs  mod.rs  parser.rs
stellar-database/: Cargo.toml
style/: index.css
temp/: example.dart.js  notes.md  todo.txt
utils/: stellar.json.code-snippets
web-server/: Cargo.toml
web-server/src/: args.rs  main.rs
website/: index.html
(+95 files in other folders)
