[package]
name = "stellar"
version = "0.2.0"
edition = "2021"
description = "CLI tool for the Stellar project"
readme = "README.md"
repository = "https://github.com/paolobettelini/stellar"

[workspace]
members = [
  "crates/stellar-cli",
  "crates/stellar-database",
  "crates/stellar-generate",
  "crates/stellar-import",
  "crates/stellar-server",
  "crates/stellar-utils",
  "crates/stellar-parser",
]

default-members = ["crates/stellar-cli"]

[[bin]]
name = "stellar-cli"
path = "src/main.rs"
