[package]
name = "stellar"
version = "0.2.0"
edition = "2021"
resolver = "2"
description = "CLI tool for the Stellar project"
readme = "README.md"
repository = "https://github.com/paolobettelini/stellar"

[workspace]
members = ["crates/*"]
default-members = ["crates/stellar-cli"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[[bin]]
name = "stellar-cli"
path = "src/main.rs"

[[workspace.metadata.leptos]]
name = "stellar"
output-name = "stellar"
bin-package = "stellar-cli"
lib-package = "stellar-server"

style-file = "crates/stellar-server/style/main.scss"
assets-dir = "crates/stellar-server/assets"

reload-port = 3080

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
browserquery = "defaults"

bin-features = [] # the "ssr" feature is always passed by "stellar-cli"
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

# Disabled: stellar sets this value to DEV or PROD according
# to the compilation mode (debug or release).
# env = "DEV"

# Disabled: stellar uses --address and --port instead
# site-addr = "0.0.0.0:8080"

# The following two options are hardcoded in the stellar-server lib,
# so make sure to update it there aswell if you were to change these.
site-root = "dist"
site-pkg-dir = "pkg"