[package]
name = "stellar-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.152", features = [ "derive" ] }

log = "0.4.19"
env_logger = "0.6.0"
anyhow = "1.0.72"

stellar-database = { path = "../stellar-database" }
tokio = "1.29.1"
futures = "0.3.28"
