[package]
name = "stellar-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "stellar-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.86"
tokio = "1.38.0"

stellar-import = { path = "../stellar-import" }
stellar-generate = { path = "../stellar-generate" }
stellar-server = { path = "../stellar-server", features = ["ssr"]}