[package]
name = "stellar-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "stellar-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.86"
tokio = "1.38.0"

stellar-check = { path = "../stellar-check" }
stellar-import = { path = "../stellar-import" }
stellar-pdfformat = { path = "../stellar-pdfformat" }
stellar-server = { path = "../stellar-server", features = ["ssr"]}