[package]
name = "stellar-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
log = "0.4.19"
serde_json = "1.0"
serde = { version = "1.0.152", features = [ "derive" ] }

stellar-import = { path = "../stellar-import" }