[package]
name = "stellar-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = [ "derive" ] }

stellar-import = { path = "../stellar-import" }
stellar-utils = { path = "../stellar-utils" }
stellar-parser = { path = "../stellar-parser" }

[dependencies.uuid]
version = "1.9.1"
features = [ "v4", "fast-rng" ]