[package]
name = "stellar-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = [ "derive" ] }
lopdf = "0.32.0"
