[package]
name = "stellar-pdfformat"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = [ "derive" ] }

stellar-import = { path = "../stellar-import" }
stellar-utils = { path = "../stellar-utils" }
stellar-parser = { path = "../stellar-parser" }
tokio = { version = "1.38.0", features = ["full"] }
num_cpus = "1.16.0"

[dependencies.uuid]
version = "1.9.1"
features = [ "v4", "fast-rng" ]
